# CourseWork_ChallengeProject_DataStructure_1

./: .gitignore  CMakeLists.txt  ComplexityAnalysis.md  Makefile  README.md  main.cpp
gui/: .gitignore  CMakeLists.txt  MainWindow.cpp  MainWindow.h  PlateQuerySystem.pro  README_GUI.md  build.sh  main_gui.cpp  resources.qrc  style.qss
include/: FileIO.h  PlateDatabase.h  PlateRecord.h  RadixSort.h  SearchAlgorithms.h  UI.h  Utils.h
src/: FileIO.cpp  PlateDatabase.cpp  RadixSort.cpp  SearchAlgorithms.cpp  UI.cpp  Utils.cpp
tests/: test.cpp  test_data.txt
